[package]
name = "local-ai-acp"
version = "0.1.0"
edition = "2021"
description = "ACP adapter for local AI — bridges any OpenAI-compatible API (Ollama, LocalAI, vLLM, llama.cpp, LM Studio) to Agent Client Protocol"
license = "MIT"
repository = "https://github.com/BlakeHung/local-ai-acp"
keywords = ["acp", "ollama", "local-ai", "agent-client-protocol", "openab"]
categories = ["command-line-utilities"]

[[bin]]
name = "local-ai-acp"
path = "src/main.rs"

[dependencies]
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", default-features = false, features = ["stream", "json", "rustls-tls"] }
uuid = { version = "1", features = ["v4"] }
bytes = "1"
